[package]
name = "image-processor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.21"
"rayon" = "1.5"
